--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -5,7 +5,7 @@ LABEL maintainer="Jorge Nin <jorgenin@Mit.edu>"
 
 # Install dependencies
 RUN apt-get update && apt-get clean && apt-get install -y \
-    xvfb 
+    xvfb vim
 
 
 # Install python dependencies
@@ -18,6 +18,8 @@ RUN if [[ ${BUILDARCH} =~ "arm64" ]]; then \
 
 
 RUN pip3 install "pyvista[all,trame]" jupyterlab ipython ipywidgets
+
+
 
 WORKDIR /home/project
 
